--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "stripe": "^17.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
