--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nanoid": "^5.0.7",
+    "nodemailer": "^6.9.15",
     "stripe": "^17.1.0"
   },
   "devDependencies": {
