--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ STRIPE_SECRET_KEY=sk_test_51Q857USAOWCOrX2sMZfuDpsvdtpavMEkKcLIyYL0jNHNVzJQQnJtb
 FRONTEND_URL=http://localhost:3000
 USER_NAME=hmydilshadkt@gmail.com
 APP_PASSWORD=utgf entq durg otjs   
+
+
+RAZORPAY_KEY_ID=rzp_test_4JipNXIrB1fYIG
+RAZORPAY_KEY_SECRET=hfowPz7iqNImF7AM1SbE1EjU
+NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_4JipNXIrB1fYIG
