--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -25,6 +26,7 @@
     "mongoose": "^8.7.0",
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.15",
+    "razorpay": "^2.9.4",
     "stripe": "^17.1.0"
   },
   "devDependencies": {
