--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ USER_NAME=hmydilshadkt@gmail.com
 APP_PASSWORD=utgf entq durg otjs   
 NODE_ENV=development
 
-RAZORPAY_KEY_ID=rzp_test_4JipNXIrB1fYIG
-RAZORPAY_KEY_SECRET=hfowPz7iqNImF7AM1SbE1EjU
-NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_4JipNXIrB1fYIG
+RAZORPAY_KEY_ID=rzp_live_16L3DjKxXRn5dA
+# RAZORPAY_KEY_SECRET=hfowPz7iqNImF7AM1SbE1EjU
+RAZORPAY_KEY_SECRET=86h9jsBUHRFK8M5HZGxRbg8G
+NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_live_16L3DjKxXRn5dA
