--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# MONGODB_URI=mongodb://localhost:27017/farwish
 MONGODB_URI=mongodb+srv://thouseefhamzacodes:D7eOxG0MAKTMdlME@cluster0.eva63.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=far31sh
 PORT=3030
@@ -9,9 +8,8 @@ STRIPE_SECRET_KEY=sk_test_51Q857USAOWCOrX2sMZfuDpsvdtpavMEkKcLIyYL0jNHNVzJQQnJtb
 FRONTEND_URL=http://localhost:3000
 USER_NAME=hmydilshadkt@gmail.com
 APP_PASSWORD=utgf entq durg otjs   
-NODE_ENV=development
 
+NODE_ENV=production
 RAZORPAY_KEY_ID=rzp_live_16L3DjKxXRn5dA
-# RAZORPAY_KEY_SECRET=hfowPz7iqNImF7AM1SbE1EjU
 RAZORPAY_KEY_SECRET=86h9jsBUHRFK8M5HZGxRbg8G
 NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_live_16L3DjKxXRn5dA
